# agentic-rag-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  data_seed.py  main.py
app/api/: routes.py  schemas.py
app/core/: __init__.py  embeddings.py  fallback.py  rag.py
app/mcp/: __init__.py  server.py
app/services/: __init__.py  chroma.py
scripts/: __init__.py  seed_faq.py
