[project]
name = "mcp-agentic-rag"
version = "0.1.0"
description = "MCP-powered Agentic RAG using Firecrawl and Chroma"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "fastmcp>=0.1.0",
    "mcp>=0.9.0",
    "firecrawl-py>=1.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "app/**/*.py", "pyproject.toml", "README.md", ".env.example"]
